--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+attrs==25.3.0
 beautifulsoup4==4.13.4
+cattrs==25.1.1
+certifi==2025.6.15
+charset-normalizer==3.4.2
+idna==3.10
+lxml==6.0.0
+platformdirs==4.3.8
+requests==2.32.4
+requests-cache==1.2.1
 soupsieve==2.7
 tqdm==4.67.1
 typing_extensions==4.14.0
+url-normalize==2.2.1
+urllib3==2.5.0
