--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.2
 idna==3.10
 lxml==6.0.0
 platformdirs==4.3.8
+prettytable==3.16.0
 requests==2.32.4
 requests-cache==1.2.1
 soupsieve==2.7
@@ -13,3 +14,4 @@ tqdm==4.67.1
 typing_extensions==4.14.0
 url-normalize==2.2.1
 urllib3==2.5.0
+wcwidth==0.2.13
