--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
+alembic==1.16.2
+asyncpg==0.30.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
 cattrs==25.1.1
 certifi==2025.6.15
 charset-normalizer==3.4.2
+greenlet==3.2.3
 idna==3.10
 lxml==6.0.0
+Mako==1.3.10
+MarkupSafe==3.0.2
 platformdirs==4.3.8
 prettytable==3.16.0
 requests==2.32.4
 requests-cache==1.2.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
 tqdm==4.67.1
 typing_extensions==4.14.0
 url-normalize==2.2.1
